# startup-blueprint

./: .eslintignore  .eslintrc.json  .flake8  .gitignore  .lycheeignore  .markdownlint.json  .markdownlintignore  .prettierignore  .sqlfluff  .yamllint.yml  BACKLOG.md  CLAUDE.md  CLEANUP_NOTES.md  IMPLEMENTATION_STATUS.md  OPENCODE.md  PROGRESS.md  QUICK_REVIEW_OPTIMIZATION.md  README.md  README_PROJECT_STATUS.md  commitlint.config.js  package-root.json  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.crewai/: .env.example  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PR_TEMPLATE.md  README.md  README_ROUTER.md  TEST_EXECUTIVE_SUMMARY.md  __init__.py  crew.py  main.py  pyproject.toml  pytest.ini
.crewai-job-output/: current-job-folder
.crewai/config/: agents.yaml  tasks.yaml
.crewai/config/tasks/: ci_log_analysis_tasks.yaml  ci_log_tasks.yaml  final_summary_tasks.yaml  full_review_tasks.yaml  legal_review_tasks.yaml  quick_review_tasks.yaml  router_tasks.yaml
.crewai/crews/: __init__.py  ci_log_analysis_crew.py  final_summary_crew.py  full_review_crew.py  legal_review_crew.py  quick_review_crew.py  router_crew.py
.crewai/crews/code-review/: spec.md
.crewai/models/: quick_review_models.py
.crewai/tests/: __init__.py  conftest.py  test_ci_output_parser_enhanced.py  test_ci_output_parser_tool.py  test_cost_tracker.py  test_github_tools.py  test_pr_metadata_tool.py  test_workspace_tool.py
.crewai/tests/fixtures/ci_results/: _job_index.json
.crewai/tests/fixtures/ci_results/core-ci/: log.txt  metadata.json
.crewai/tools/: README.md  __init__.py  ci_output_parser_tool.py  ci_tools.py  commit_summarizer_tool.py  cost_tracker.py  diff_parser.py  github_tools.py  pr_metadata_tool.py  related_files_tool.py  workspace_tool.py
.crewai/utils/: __init__.py  model_config.py
.crewai/workspace/: .gitkeep
.crewai/workspace/trace/: .gitkeep
.github/: .trigger  CI_CD_GUIDE.md  CODEOWNERS  MERMAID_STYLE_GUIDE.md  SECRETS.md  dependabot.yml  lychee.toml
.github/workflows/: README.md  agents.yml  check-preview-label-conflict.yml  ci.yml  core-ci-reusable.yml  core-ci.yml  crewai-review-reusable.yml  crewai-review.yml  deploy.yml  format-lint-reusable.yml  link-check-reusable.yml  preview-deploy-reusable.yml  production-deploy-reusable.yml  test-build.yml  test-crewai-reusable.yml  test-orchestration-reusable.yml  validate-credentials-reusable.yml  validate-environment-reusable.yml  website-test-build-reusable.yml
.sisyphus/drafts/: crewai-final-summary-debug.md
.sisyphus/plans/: crewai-final-summary.md
apps/startup-blueprint/: API.md  MIGRATIONS.md  README.md  package.json  tsconfig.json  tsconfig.pages.json  wrangler.toml
docs/: 01-legal-foundation.md  02-domain-dns.md  03-email-infrastructure.md  04-git-repository.md  05-financial-tools.md  06-deployment-cicd.md  07-operations-manual.md  QUICKSTART.md  ci-log-capture-implementation.md  preview-deployment-custom-domain.md
docs/agentic/: README.md  agent_error_recovery.md  agentic_coding.md  autonomy_boundaries.md  context_budget_guide.md  contribute_standards.md  custom-instructions.md  file_organization.md  instructions.md  operational_readiness.md  workflow_guide.md
docs/blueprints/: startup-blueprint-guide.md
docs/guides/: 01-legal-foundation.md  02-domain-dns.md  03-email-infrastructure.md  04-git-repository.md  05-financial-tools.md  06-deployment-cicd.md  07-operations-manual.md  QUICKSTART.md
docs/pr/: 00011-feat(crewai)-optimize-crew.md  00011.feat-crewai-optimization.md
scripts/: README.md  validate-credentials.sh
scripts/cloudflare/: README.md  deploy-helper.sh  (+2 more)
website/: README.md  package.json
(+25 files in other folders)
